--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .gradle
 **/build/
 !src/**/build/
-
+*/bin
 # Ignore Gradle GUI config
 gradle-app.setting
 
@@ -19,3 +19,4 @@ gradle-app.setting
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+.class
