REFACTOR ELEMENTARYSCHOOL ADD LOGIN
Refactor de package and add login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_esj
+spring.datasource.username=db_esj
+spring.datasource.password=m
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
